# aplicatie_gestionare_teste

./: README.md
App1/: App1.cpp  CMakeLists.txt  Tasks.txt
App1/classes/: Exercitiu.cpp  Exercitiu.h  Professor.cpp  Professor.h  Test.cpp  Test.h
App1/functions/: adugareIntrebare.h  afisVariantaCurenta.h  creareTest.h  fileExists.h  login.h  logout.h  modificareEnunt.h  modificareExercitiu.h  modificareRaspunCorect.h  modificareRaspuns.h  modificareTest.h  statisticiTest.h  stopModificareExercitiu.h  stopModificareTest.h  vizualizareProfil.h
App1/functions/helpers/: getTest.h  verifyCreateSession.h  verifyEditSession.h  verifyExEditSessioin.h  verifyLoggedProf.h
App2/: CMakeLists.txt  Variabile.h  main.cpp
App2/Functii/: Deschide_test.h  Logare.h  Raspuns_intrebare.h  Salveaza_raspunsuri.h
Share/Clase/: Student.cpp  Student.h
Share/Fisiere/: Profesor_logat.txt  Student_logat.txt
Share/Fisiere/Profesori/: Poenaru_Iulian.txt
Share/Fisiere/Teste/: TEST1.txt  Test_Curent.txt  istorie0205.txt  istorie3105.txt  testdetest.txt  testdetest2.txt
